fixed geonames connection and edited id

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     <div class="form-group row">
                         <label for="inputZip" class="col-sm-3 col-form-label text-right">Zip</label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                        <input type="text" class="form-control" id="restaurantinputZip" placeholder="90210">                                    
                         </div>
                     </div>
                 </div>    
