--- a/index.html
+++ b/index.html
@@ -280,19 +280,19 @@
                     <div class="form-group row">
                         <label for="inputAddress" class="col-sm-3 col-form-label text-right">Address</label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="text" class="form-control" id="restaurantinputAddress" placeholder="1234 Main St">
                         </div>
                     </div>
                         <div class="form-group row">
                         <label for="inputCity" class="col-sm-3 col-form-label text-right">City<span class="required">*</span></label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                        <input type="text" class="form-control" id="restaurantinputCity" placeholder="Los Angeles"> 
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="inputState" class="col-sm-3 col-form-label text-right">State<span class = "required">*</span></label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="State" placeholder="CA">
+                        <input type="text" class="form-control" id="restaurantState" placeholder="CA">
                         </div>
                     </div>                                
                     <div class="form-group row">
